[package]
name = "uvd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
clap = "4.5.51"
crossterm = "0.29.0"
glob = "0.3.3"
ignore = "0.4.25"
indicatif = { version = "0.18.2", features = ["futures"] }
inquire = { version = "0.9.1", features = ["console", "date", "editor"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
spinners = "4.1.1"
tabled = "0.20.0"
tar = "0.4.44"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
zstd = "0.13.3"
