[package]
name = "uvd"
version = "0.0.0"
edition = "2024"
description = "universal verivied disc"
authors = ["hackia <dev@hackia.org>"]
categories = ["command-line-utilities"]
license = "AGPL-3.0"
homepage = "https://github.com/hackia/uvd/wiki"
repository = "https://github.com/hackia/uvd"
keywords = ["disc"]
[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = "4.5.51"
inquire = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.44"
zstd = "0.13.3"
serde_yaml = "0.9.34+deprecated"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
serde_json = "1.0.145"
